--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "browser-sync": "2.23.6"
   },
   "dependencies": {
+    "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
     "imagemin-webpack-plugin": "^1.5.2",
     "load-google-maps-api-2": "^1.0.2"
