--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
     "imagemin-webpack-plugin": "^1.5.2",
-    "load-google-maps-api-2": "^1.0.2"
+    "load-google-maps-api-2": "^1.0.2",
+    "popper.js": "^1.12.9"
   }
 }
